--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
                         <img class="c-icon__pole" src="./img/Barber Pole free icons designed by fjstudio.png" alt="営業日・時間">
                         <h2 class="c-title">営業日・時間</h2>
                         </div>
-                    <table class="c-table__info">
+                    <table class="c-table__infoday">
                         <tbody>
                             <tr>
                                 <td rowspan="2">全日<br>8：30 ～ 17：00</td>
-                                <td>月</td>
-                                <td>火</td>
-                                <td>水</td>
-                                <td>木</td>
-                                <td>金</td>
-                                <td>土</td>
-                                <td>日</td>
+                                <td class="c-table__td">月</td>
+                                <td class="c-table__td">火</td>
+                                <td class="c-table__td">水</td>
+                                <td class="c-table__td">木</td>
+                                <td class="c-table__td">金</td>
+                                <td class="c-table__td">土</td>
+                                <td class="c-table__td">日</td>
                             </tr>
                             <tr>
                                 <td>休</td>
@@ -70,47 +70,49 @@
                         </tbody>
                     </table>
                 </section>
- <section id="price" class="p-menu">
+ <section id="price" class="p-pricemenu">
     <div class="c-flex" > 
         <img class="c-icon__scissors" src="./img/8124.png" alt="MENU">
         <h2 class="c-title">ＭＥＮＵ</h2>
         </div>
-        <div class="c-pricemenu">
+        <div class="c-wrapper">
+        <div class="c-menu">
             <li class="c-flex__menuset">
                 <p class="c-name">大人調髪</p>
-                <p class="c-price">２３００円</p>
+                <p class="c-price">２３００<span class="u-span"></span>円</p>
             </li>
             <li class="c-flex__menuset">
                 <p class="c-name">高校生</p>
-                <p class="c-price">２１００円</p>
+                <p class="c-price">２１００<span class="u-span"></span>円</p>
             </li>
             <li class="c-flex__menuset">
                 <p class="c-name">中学生</p>
-                <p class="c-price">２０００円</p>
+                <p class="c-price">２０００<span class="u-span"></span>円</p>
             </li>
             <li class="c-flex__menuset">
                 <p class="c-name">子供</p>
-                <p class="c-price">１８００円</p>
+                <p class="c-price">１８００<span class="u-span"></span>円</p>
             </li>
         </div>
-         <div class="c-pricemenu">
+         <div class="c-menu">
             <li class="c-flex__menuset">
                 <p class="c-name">スポーツ刈り</p>
-                <p class="c-price">２７００円</p>
+                <p class="c-price">２７００<span class="u-span"></span>円</p>
             </li>
             <li class="c-flex__menuset">
                 <p class="c-name">丸刈り</p>
-                <p class="c-price">２０００円</p>
+                <p class="c-price">２０００<span class="u-span"></span>円</p>
             </li>
             <li class="c-flex__menuset">
                 <p class="c-name">顔剃り</p>
-                <p class="c-price">２０００円</p>
+                <p class="c-price">２０００<span class="u-span"></span>円</p>
             </li>
             <li class="c-flex__menuset">
-                <p class="c-name">毛染め</p>
-                <p class="c-price">４３００円～</p>
+                <p class="c-name__last">毛染め</p>
+                <p class="c-price__last">４３００<span class="u-span"></span>円<span class="u-span__last"></span>～</p>
             </li>
         </div>
+    </div>
                 </section>
 
                 <section class="p-serviceflow">
