--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
                   <p class="c-price">２３００<span class="u-span"></span>円</p>
                 </li>
                 <li class="c-flex__menuset">
-                  <p class="c-name">高校生</p>
+                  <p class="c-name__threeletters">高校生</p>
                   <p class="c-price">２１００<span class="u-span"></span>円</p>
                 </li>
                 <li class="c-flex__menuset">
-                  <p class="c-name">中学生</p>
+                  <p class="c-name__threeletters">中学生</p>
                   <p class="c-price">２０００<span class="u-span"></span>円</p>
                 </li>
                 <li class="c-flex__menuset">
-                  <p class="c-name">子供</p>
+                  <p class="c-name__twoletters">子供</p>
                   <p class="c-price">１８００<span class="u-span"></span>円</p>
                 </li>
               </div>
@@ -99,11 +99,11 @@
                   <p class="c-price">２７００<span class="u-span"></span>円</p>
                 </li>
                 <li class="c-flex__menuset">
-                  <p class="c-name">丸刈り</p>
+                  <p class="c-name__threeletters">丸刈り</p>
                   <p class="c-price">２０００<span class="u-span"></span>円</p>
                 </li>
                 <li class="c-flex__menuset">
-                  <p class="c-name">顔剃り</p>
+                  <p class="c-name__threeletters">顔剃り</p>
                   <p class="c-price">２０００<span class="u-span"></span>円</p>
                 </li>
                 <li class="c-flex__menuset">
