--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
   </head>
 
   <body>
+    <img src="./img/ezgif.com-gif-maker.png" alt="" class="c-icon__anime" />
+    <p class="c-text__tategaki">
+      -------------------------------------------------------------------------------------------------------　かりあげくんは三重県四日市市の諏訪神社横にあります。近鉄四日市駅より徒歩５分程で到着します。　ビル横通路の奥に健在しているため少し分かりにくいですが、表に出ているポールが目印です。　
+      ４０年以上夫婦でやっている昔ながらの床屋さんです。　今は予約制となっておりますので、ネット予約・電話予約にて是非お越しください。　---------------------------------------------------------------------------------
+    </p>
     <div class="c-inner__whole">
       <header class="l-header">
         <a href="https://liff.line.me/1657410796-OkYXo4wo?liff_id=1657410796-OkYXo4wo&is=w2BxKg2c4F">
           <div class="c-flex__header">
-            <img contenteditable="" src="./img/8125.png" alt="ハサミのアイコン" class="c-icon__header" />
+            <img src="./img/8125.png" alt="ハサミのアイコン" class="c-icon__header" />
             <h2 class="c-title__netreserve">ネット予約</h2>
           </div>
         </a>
@@ -42,7 +47,7 @@
           </section>
           <section class="p-businessday">
             <div class="c-flex__dayandtime">
-              <img class="c-icon__pole" src="./img/Barber Pole free icons designed by fjstudio.png" alt="営業日・時間" />
+              <img class="c-icon__pole" src="./img/barberpole.png" alt="営業日・時間" />
               <h2 class="c-title">営業日・時間</h2>
             </div>
             <table class="c-table__infoday">
@@ -124,7 +129,7 @@
                 <img src="./img/853804_m.jpg" alt="カット" />
               </div>
               <figcaption class="c-card__article">
-                <h3 class="c-title__serviceflow"><span>０１</span>まずはカットから</h3>
+                <h3 class="c-title__serviceflow-01"><span>０１</span>まずはカットから</h3>
                 <p class="c-card__text">お客様のオーダーに合わせてカットいたします。</p>
               </figcaption>
             </figure>
@@ -132,23 +137,23 @@
               <img src="./img/8125.png" alt="" />
             </div>
             <figure class="c-card__flex-second">
-              <div class="c-card__img">
+              <div class="c-card__img-02">
                 <img src="./img/adam-winger-WDmvpGs2060-unsplash.jpg" alt="シャンプー" />
               </div>
               <figcaption class="c-card__article">
-                <h3 class="c-title__serviceflow"><span>０２</span>次にシャンプー</h3>
+                <h3 class="c-title__serviceflow-02"><span>０２</span>次にシャンプー</h3>
                 <p class="c-card__text">ちょうどいい手加減で切った髪を洗い落します。</p>
               </figcaption>
             </figure>
             <div class="c-image__left">
               <img src="./img/8125.png" alt="" />
             </div>
-            <figure class="c-card__flex">
+            <figure class="c-card__flex-third">
               <div class="c-card__img">
                 <img src="./img/barber-gcf28185a1_1280.jpg" alt="髭剃り" />
               </div>
               <figcaption class="c-card__article">
-                <h3 class="c-title__serviceflow"><span>０３</span>最後に髭剃り</h3>
+                <h3 class="c-title__serviceflow-03"><span>０３</span>最後に髭剃り</h3>
                 <p class="c-card__text">床屋といえば正にこれ。<br />顔もさっぱりに仕上がります。</p>
               </figcaption>
             </figure>
