--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               <img class="c-icon__scissors" src="./img/8124.png" alt="お知らせ" />
               <h2 class="c-title">お知らせ</h2>
             </div>
-            <p class="c-text__info">○○月○○日～〇〇月○○日までお休みします</p>
-            <p class="c-text__info">○○月○○日～〇〇月○○日までお休みします</p>
+            <p class="c-text__info">◆ネット予約始めました。＊ＬＩＮＥの登録が必要です。</p>
+            <p class="c-text__info">◆１１月２３日は営業いたします。</p>
           </section>
           <section class="p-businessday">
             <div class="c-flex__dayandtime">
@@ -133,24 +133,24 @@
                 <p class="c-card__text">お客様のオーダーに合わせてカットいたします。</p>
               </figcaption>
             </figure>
-            <div class="c-image__right">
+            <div class="c-image__right fadeRightTrigger">
               <img src="./img/8125.png" alt="" />
             </div>
             <figure class="c-card__flex-second">
               <div class="c-card__img-02">
-                <img src="./img/adam-winger-WDmvpGs2060-unsplash.jpg" alt="シャンプー" />
+                <img src="./img/syanpu1.JPG" alt="シャンプー" />
               </div>
               <figcaption class="c-card__article">
                 <h3 class="c-title__serviceflow-02"><span>０２</span>次にシャンプー</h3>
                 <p class="c-card__text">ちょうどいい手加減で切った髪を洗い落します。</p>
               </figcaption>
             </figure>
-            <div class="c-image__left">
+            <div class="c-image__left fadeLeftTrigger">
               <img src="./img/8125.png" alt="" />
             </div>
             <figure class="c-card__flex-third">
               <div class="c-card__img">
-                <img src="./img/barber-gcf28185a1_1280.jpg" alt="髭剃り" />
+                <img src="./img/higesori1.JPG" alt="髭剃り" />
               </div>
               <figcaption class="c-card__article">
                 <h3 class="c-title__serviceflow-03"><span>０３</span>最後に髭剃り</h3>
@@ -207,8 +207,14 @@
           </div>
         </div>
       </footer>
-      <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script>
-      <script type="text/javascript" src="/js/script.js"></script>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.6.1.min.js"
+      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script> -->
+    <script type="text/javascript" src="./js/script.js"></script>
   </body>
 </html>
