--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
               <img class="c-icon__scissors" src="./img/8124.png" alt="お知らせ" />
               <h2 class="c-title">お知らせ</h2>
             </div>
-            <p class="c-text__info">◆ネット予約始めました。＊ＬＩＮＥの登録が必要です。</p>
-            <p class="c-text__info">◆１１月２３日は営業いたします。</p>
+            <!-- <p class="c-text__info">◆年末年始のお知らせ　12/30午後　～　1/5　まで休業となります。</p>
+            <p class="c-text__info">◆12/27（火）・30（金）は営業しております。</p> -->
+            <p class="c-text__info">
+              ◆ネット予約始めました。<a class="c-text__link" href="https://lin.ee/Uf36rtw">＊ＬＩＮＥ公式アカウントの登録はこちらから。</a>
+            </p>
           </section>
           <section class="p-businessday">
             <div class="c-flex__dayandtime">
